--- a/lazyLoad/public/index.html
+++ b/lazyLoad/public/index.html
@@ -14,10 +14,10 @@
         <p class="text-base leading-6 text-indigo-600 font-semibold tracking-wide uppercase">
           Lazy Loading
         </p>
-        <h3 class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10">
+        <h3 class="p-4 mt-2 text-3xl leading-8 font-extrabold tracking-tight sm:text-4xl sm:leading-10">
           Manipulación del DOM
         </h3>
-        <button class="p-3">Agregar imagen</button>
+        <button class="bg-indigo-500  p-3 border">Agregar imagen</button>
         <div id="app"></div>
 
       </div>
